--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 authors = [{name="Daniel Mora"}]
 description = "CLI for summarizing etherium transaction logs"
 readme = "README.md"
-dependencies = ["pandas", "dask","click"]
+dependencies = ["pandas[all]", "dask", "click"]
 requires-python = ">=3.10"
 
 [project.scripts]
